# lisette

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  justfile  lefthook.yaml  release-plz.toml
crates/benchmark/: Cargo.toml
crates/benchmark/benches/: analyze.rs  emit.rs  parse.rs
crates/benchmark/fixtures/single/: small.lis
crates/benchmark/src/: lib.rs
crates/cli/: Cargo.toml  agents_template.md  build.rs  go-version
crates/cli/src/: command.rs  fs.rs  go_cli.rs  main.rs  output.rs  pipeline.rs  shell_words.rs  typedef_regen.rs  typedef_scan.rs  workspace.rs
crates/cli/src/handlers/: add.rs  bindgen.rs  build.rs  check.rs  completions.rs  doc.rs  help.rs  learn.rs  lsp.rs  mod.rs  new.rs  reconciliation.rs  run.rs  sync.rs  test.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: analysis.rs  completion.rs  definition.rs  document.rs  hover.rs  inlay_hints.rs  lib.rs  patterns.rs  service.rs  signature_help.rs  snapshot.rs  traversal.rs  validation.rs
crates/lsp/tests/: lsp.rs  lsp_harness.rs
crates/passes/: Cargo.toml
crates/passes/src/: analyze.rs  generic_constraints.rs  lib.rs
crates/passes/src/passes/: comparison.rs  deferred.rs  mod.rs  walk.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: ast.rs  ast_folder.rs  attributes.rs  containment.rs  desugar.rs  display.rs  go_names.rs  lib.rs  types.rs
crates/syntax/src/lex/: errors.rs  mod.rs  token.rs  types.rs
crates/syntax/src/parse/: annotations.rs  control_flow.rs  definitions.rs  error.rs  expressions.rs  mod.rs  patterns.rs  pratt.rs  strings.rs
crates/syntax/src/program/: definition.rs  emit_input.rs  file.rs  generic_constraints.rs  mod.rs  module.rs  resolution.rs
playground/wasm/: Cargo.toml
playground/wasm/src/: lib.rs
tests/: Cargo.toml  e2e_learn.rs  e2e_run.rs  e2e_smoke.rs  e2e_suite.rs  embed_diff.rs  emit_runtime_skip.txt  lsp.rs  manifest_pins.rs
tests/_embed_harness/: compare.rs  corpus.rs  fixtures.rs  go_answerer.rs  lisette_answer.rs  mod.rs  random_scenarios.rs  render_go.rs  render_lis.rs  run_check.rs  runner.rs  scenario.rs
tests/_embed_harness/snapshots/: go_declarations_diamond.snap  go_declarations_interface.snap  go_run_direct.snap  lis_declarations_diamond.snap  lis_declarations_interface.snap  lis_questions_satisfaction.snap  lis_questions_value_embed.snap  lis_run_direct.snap
tests/_harness/: build.rs  builders.rs  emit.rs  filesystem.rs  formatting.rs  infer.rs  lint.rs  macros.rs  mod.rs  pipeline.rs
tests/e2e_smoke_project/src/: bindings.test.lis  builtins.test.lis  collections.test.lis  concurrency.test.lis  control_flow.test.lis  fixtures.lis  functions.test.lis  generics.test.lis  go_interop.test.lis  main.lis  methods_ufcs.test.lis  operators.test.lis  options_results.test.lis  partial.test.lis  patterns.test.lis  strings.test.lis  structs.test.lis
tests/e2e_suite/: harness.rs  skip.txt
tests/embed_go_answerer/: go.mod  main.go
tests/spec/: mod.rs  sync.rs
tests/spec/desugar/: mod.rs
tests/spec/desugar/snapshots/: pipeline_as_return.snap  pipeline_chained.snap  pipeline_chained_with_partial_application.snap  pipeline_in_block.snap  pipeline_in_format_string.snap  pipeline_in_let.snap  pipeline_multiple_in_function.snap  pipeline_nested_calls.snap  pipeline_partial_application_multiple_args.snap  pipeline_preserves_other_operators.snap  pipeline_simple.snap  pipeline_triple_chained.snap  pipeline_with_arithmetic.snap  pipeline_with_parens.snap  pipeline_with_partial_application.snap
tests/spec/emit/: arrays.rs  concurrency.rs  control_flow.rs  expressions.rs  functions.rs  go_interface_adapter.rs  imports.rs  interop_matrix.rs  literals.rs  mod.rs  opaque_handle.rs  partial.rs  patterns.rs  prelude.rs  result_option_patterns.rs  types.rs
tests/spec/emit/snapshots/: abi_transition_callback_adapter_lowered_to_tagged.snap  abi_transition_lowered_tail_return_partial_ok.snap  abi_transition_lowered_tail_return_tuple_with_nullable_slot.snap  adapter_collects_methods_from_aliased_parent_interface.snap  address_of_enum_variant.snap  address_of_function_call.snap  address_of_function_identifier.snap  alias_chain_propagates_comparable_through_two_steps.snap  alias_chain_uses_declared_comparable_bounds.snap  alias_free_base_not_pinned_before_call_rhs.snap  alias_free_operand_not_pinned_before_call.snap  alias_free_target_keeps_compound_assign_with_call_rhs.snap  alias_over_array_map_key_renders_comparable_bound.snap  alias_partial_impl_ufcs_call.snap  alias_specialized_impl_ufcs_call.snap  aliased_go_import_preserved_for_unused_type.snap  aliased_result_return_adapts_to_generic_interface.snap  append_args_eval_order_captured.snap  append_bare_statement_writes_back_to_local.snap  append_base_mutation_does_not_leak_into_result.snap  append_from_call_result_does_not_alias.snap  append_from_zero_growth_append_does_not_alias.snap  append_non_lvalue_preserves_args.snap  append_non_lvalue_receiver_discards.snap  append_results_do_not_alias.snap  array_as_map_key.snap  array_as_slice_copies_into_new_slice.snap  array_element_assignment.snap  array_element_assignment_through_ref.snap  array_equality.snap  array_for_loop.snap  array_get_as_slice_identifier_form.snap  array_get_map_value_receiver_hoists.snap  array_get_returns_bounds_checked_option.snap  array_get_through_ref_deref.snap  array_get_to_slice_identifier_form.snap  array_in_containers.snap  array_inequality.snap  array_length.snap  array_let_destructure.snap  (+1805 more)
tests/spec/format/: mod.rs
tests/spec/format/snapshots/: assert_statement.snap  assignment_simple.snap  attribute_multiple_on_struct.snap  (+308 more)
tests/spec/graph/: mod.rs
tests/spec/infer/: arrays.rs  basics.rs  control_flow.rs  equality.rs  expressions.rs  functions.rs  mod.rs  opaque_handle.rs  post_inference.rs  try.rs  types.rs
tests/spec/lex/: mod.rs
tests/spec/parse/: mod.rs
tests/spec/pattern_analysis/: mod.rs
tests/ui/: mod.rs  unix.rs
tests/ui/errors/: mod.rs
tests/ui/lint/: fixes.rs  mod.rs
tests/ui/snapshots/: unix_multi_label_emits_single_location.snap  unix_parse_error_shape.snap
(+3057 files in other folders)
