[package]
name = "tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dev-dependencies]
semantics = { package = "lisette-semantics", path = "../crates/semantics" }
syntax = { package = "lisette-syntax", path = "../crates/syntax" }
diagnostics = { package = "lisette-diagnostics", path = "../crates/diagnostics" }
format = { package = "lisette-format", path = "../crates/format" }
emit = { package = "lisette-emit", path = "../crates/emit" }
stdlib = { package = "lisette-stdlib", path = "../crates/stdlib" }
deps = { package = "lisette-deps", path = "../crates/deps" }
rustc-hash.workspace = true
insta.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = "3"

[[test]]
name = "suite"
path = "suite.rs"

[[test]]
name = "e2e_smoke"
path = "e2e_smoke.rs"

[[test]]
name = "e2e_run"
path = "e2e_run.rs"

[[test]]
name = "e2e_learn"
path = "e2e_learn.rs"

[[test]]
name = "e2e_suite"
path = "e2e_suite.rs"

[[test]]
name = "embed_diff"
path = "embed_diff.rs"
