[package]
name = "lisette"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"

[lib]
doctest = false

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "lis"
path = "src/main.rs"

[dependencies]
semantics = { package = "lisette-semantics", version = "=0.4.4", path = "../semantics" }
passes = { package = "lisette-passes", version = "=0.4.4", path = "../passes" }
syntax = { package = "lisette-syntax", version = "=0.4.4", path = "../syntax" }
diagnostics = { package = "lisette-diagnostics", version = "=0.4.4", path = "../diagnostics" }
format = { package = "lisette-format", version = "=0.4.4", path = "../format" }
emit = { package = "lisette-emit", version = "=0.4.4", path = "../emit" }
stdlib = { package = "lisette-stdlib", version = "=0.4.4", path = "../stdlib" }
deps = { package = "lisette-deps", version = "=0.4.4", path = "../deps" }
lsp = { package = "lisette-lsp", version = "=0.4.4", path = "../lsp" }
tokio = { version = "1", features = ["rt-multi-thread", "io-std"] }
tower-lsp = "0.20"
fs2 = "0.4"
terminal_size = "0.4"
owo-colors.workspace = true
rustc-hash.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
