[package]
name = "lisette-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
syntax = { package = "lisette-syntax", version = "0.4.3", path = "../syntax" }
semantics = { package = "lisette-semantics", version = "0.4.3", path = "../semantics" }
passes = { package = "lisette-passes", version = "0.4.3", path = "../passes" }
diagnostics = { package = "lisette-diagnostics", version = "0.4.3", path = "../diagnostics" }
deps = { package = "lisette-deps", version = "0.4.3", path = "../deps" }
format = { package = "lisette-format", version = "0.4.3", path = "../format" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
miette.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
bytes = "1"
deps = { package = "lisette-deps", path = "../deps" }
futures = "0.3"
serde.workspace = true
serde_json.workspace = true
stdlib = { package = "lisette-stdlib", path = "../stdlib" }
tempfile = "3"
tokio-util = { version = "0.7", features = ["codec"] }
