[package]
name = "lisette-passes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
semantics = { package = "lisette-semantics", version = "=0.4.4", path = "../semantics" }
syntax = { package = "lisette-syntax", version = "=0.4.4", path = "../syntax" }
diagnostics = { package = "lisette-diagnostics", version = "=0.4.4", path = "../diagnostics" }
ecow = "0.2"
rustc-hash.workspace = true
rayon.workspace = true
