[package]
name = "lisette-syntax"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false
test = false

[features]
serde = ["dep:serde", "ecow/serde"]

[dependencies]
ecow.workspace = true
rustc-hash.workspace = true
serde = { version = "1", features = ["derive", "rc"], optional = true }
