[package]
name = "lisette-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings for the Lisette compiler"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
ecow = "0.2"

lisette-format      = { path = "../../crates/format" }
lisette-syntax      = { path = "../../crates/syntax" }
lisette-semantics   = { path = "../../crates/semantics" }
lisette-emit        = { path = "../../crates/emit" }
lisette-diagnostics = { path = "../../crates/diagnostics" }
lisette-deps        = { path = "../../crates/deps" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
